--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,47 @@
 @layer base {
   :root {
     background: none;
-  }
-
-  body {
     background: url('assets/page-bg.jpg') fixed;
     background-color: theme('colors.base-100');
     background-size: cover;
+  }
+
+  body {
     @apply flex flex-col items-stretch p-0;
   }
 
   #root {
     @apply flex flex-col items-center mx-0;
+  }
+
+  /* Firefox */
+  @supports (-moz-appearance: none) {
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: theme('colors.info') theme('colors.base-100');
+    }
+  }
+
+  /* Chrome, Edge, and Safari */
+  @supports selector(::-webkit-scrollbar) {
+    * {
+      scrollbar-width: unset;
+      scrollbar-color: unset;
+    }
+
+    *::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
+
+    *::-webkit-scrollbar-track {
+      background-color: theme('colors.base-100');
+    }
+
+    *::-webkit-scrollbar-thumb {
+      background-color: theme('colors.info');
+      border-radius: 8px;
+      border: 1px solid theme('colors.base-100');
+    }
   }
 }
